# trashy

./: LICENSE  README.md  pyproject.toml
src/pytrash/: __init__.py  _macos.py  _type.py  _windows.py
src/repycle/: __init__.py  _linux.py  _macos.py  _type.py  _windows.py
src/trashy/: __init__.py  _dsstore.py  _linux.py  _macos.py  _type.py  _windows.py
tests/: test_dsstore.py
