[project]
name = "repycle"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "NSPC911", email = "87571998+NSPC911@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
repycle = "repycle:main"

[build-system]
requires = ["uv_build>=0.11.28,<0.12.0"]
build-backend = "uv_build"
